[package]
name = "wasp"
version = "0.3.3"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT"
description = "a web assembly lisp programming language"

[dependencies]
failure = "0.1.5"
wasmly = "0.1.7"
byteorder = "1.3.1"
clap = "2"
walkdir = "2"

[dependencies.nom]
version = "^4.2"
features = ["verbose-errors"]
